  - TitleBar's height is now controlled by sizeHint() instead of hardcoded.
    If you haven't overridden TitleBar or just inheriting from TitleBarWidget then there's nothing to do,
    as TitleBarWidget already reimplements sizeHint. If you're inheriting directly from TitleBar then make
    sure to provide a sizeHint.

* v1.3.1 (unreleased)
  - Improve restoring layout when RestoreOption_RelativeToMainWindow is used (#171)
  - Improved dragging windows across screens in mixed hdpi setups
  - Fixed Flag_NativeTitleBar not hidding the client title bars when restoring (#170)
  - Double clicking a native title bar of a Qt::Tool window will now redock the window (#173)
  - Size of FloatingWindow now accounts for the fact that it's using Flag_NativeTitleBar and
    resizes its content accordingly (#174)
  - Fixed popups on overlayed dock widgets not working

* v1.3.0 (8 February 2021)
  - Experimental QtQuick support (#49)
  - Added static DockWidgetBase::byName() (#126)
  - The enum KDDockWidgets::AddingOption has been deprecated, use
    KDDockWidgets::InitialVisibilityOption instead
  - You can now pass a preferred initial size to MainWindow::addDockWidget() (#95)
  - Added DockWidgetBase::Option_DeleteOnClose
  - Added Config::Flag_CloseOnlyCurrentTab
  - PySide6 support
  - Layout restorer now restores maximzied/minimized state too (#81)
  - Fixed dock indicators sometimes not appearing on Windows (#103)
  - Fixed Flag_NativeTitleBar not working
  - Fixed drag offset when dragging too fast with mouse
  - Fixed bug where last tab index position wouldn't be remembered in case user
    had manually reordered tabs (#154)
  - Fixed crash when hosting a QQuickWidget (#150)
  - Fixed CMake Visual Studio generator not working
  - Sidebar overlays now maintain their size when toggled (#155)
  - Added DockWidget::setFloatingGeometry() (#144)

* v1.2.1 (6 February 2021)
  - Support for resizing dock widgets when they are in overlay/popup mode (autohide/sidebar feature)