@@ -5,6 +5,7 @@
     If you haven't overridden TitleBar or just inheriting from TitleBarWidget then there's nothing to do,
     as TitleBarWidget already reimplements sizeHint. If you're inheriting directly from TitleBar then make
     sure to provide a sizeHint.
+  - Added MainWindow::closeDockWidgets()
 
 * v1.3.1 (unreleased)
   - Improve restoring layout when RestoreOption_RelativeToMainWindow is used (#171)
